# lab8

./: .breakpoints  CSV.py  main.py  people.csv  pyproject.toml  test.py  test2.py  tests.py  tests2.py
