[tool.poetry]
name = "repl_nix_lab8"
version = "0.1.0"
description = ""
authors = ["ellakarhi <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Counter = "^1.0.0"
libcgroup = "^0.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
